--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OX FOUNDATION</title>
     <link rel="stylesheet" href="index.css">
     <script src="index.js" defer></script>
@@ -11,7 +13,7 @@
     <header>
         <div class="topnav">
             <div class="social-icons">
-                <a href="https://www.whatsapp.com" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://chat.whatsapp.com/C0GxXGkwsuN7mTEYEO7abm" target="_blank"><i class="fab fa-whatsapp"></i></a>
                 <a href="https://youtube.com/@ox_foundation?si=50IUShLSpK-o2L8v" target="_blank"><i class="fab fa-youtube"></i></a>
                 <a href="https://x.com/Ox_foundation?t=IPFS84UYVT8BjCHkPyzB4Q&s=09" target="_blank"><i class="fab fa-twitter"></i></a>
                 <a href="https://www.instagram.com/ox_foundation?igsh=ajJscGJ2NjYxZWY1" target="_blank"><i class="fab fa-instagram"></i></a>
