--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
                     <button class="dropbtn">Home</button>
                     <div class="dropdown-content">
                         <a href="index.html">Subpage 1</a>
-                        <a href="index.html">Subpage 2</a>
                     </div>
                 </div>
                 <div class="dropdown">
@@ -50,17 +49,17 @@
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button class="dropbtn">News</button>
+                    <button class="dropbtn news">News</button>
                     <div class="dropdown-content">
-                        <a href="news.html">Latest News</a>
-                        <a href="news.html">Events</a>
+                        <a href="news.html" class="news-link">Latest News</a>
+                        <a href="news.html" class="news-link">Events</a>
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button class="dropbtn">Timetable</button>
+                    <button class="dropbtn timetable">Timetable</button>
                     <div class="dropdown-content">
-                        <a href="timetable.html">Class Timetable</a>
-                        <a href="timetable.html">Exams</a>
+                        <a href="timetable.html" class="timetable-link">Class Timetable</a>
+                        <a href="timetable.html" class="timetable-link">Exams</a>
                     </div>
                 </div>
             </div>
@@ -87,19 +86,19 @@
             <div class="team-members">
                 <div class="member">
                     <img src="fo1.jpg" alt="Team Member 1">
-                    <p>IBRAHIM YUSUF - Forex Expert</p>
-                    <p>Ibrahim Yusuf, a seasoned Forex expert, has established himself as a leading authority in the field of currency trading. With years of hands-on experience and a deep understanding of market dynamics, Ibrahim has developed a unique set of skills that have consistently delivered impressive results. Now, he is offering others the opportunity to tap into his wealth of knowledge by selling his talent as a Forex mentor and strategist.</p>
+                    <p>IBRAHIM YUSUF - Crypto Specialist</p>
+                    <p>Ibrahim Yusuf, a Crypto Specialist with more than 5yrs of experience is now offering his extensive knowledge and expertise in cryptocurrency markets to those looking to enhance their trading skills. With a deep understanding of blockchain technology and market trends, Akinola is dedicated to guiding others in navigating the complexities of the crypto world, ensuring they make informed and profitable decisions.</p>
                 </div>
+                   
                 <div class="member">
                     <img src="fo 2.jpg" alt="Team Member 2">
-                    <p>AKINOLA IBIYEMI - Crypto Specialist</p>
-                    <p>Akinola Ibiyemi, a renowned Crypto Specialist, is now offering his extensive knowledge and expertise in cryptocurrency markets to those looking to enhance their trading skills. With a deep understanding of blockchain technology and market trends, Akinola is dedicated to guiding others in navigating the complexities of the crypto world, ensuring they make informed and profitable decisions.</p>
-
+                    <p>AKINOLA IBIYEMI - Forex Expert</p>
+                    <p>Akinola Ibiyemi, a seasoned Forex expert, has established himself as a leading authority in the field of currency trading. With years of hands-on experience and a deep understanding of market dynamics, Ibrahim has developed a unique set of skills that have consistently delivered impressive results. Now, he is offering others the opportunity to tap into his wealth of knowledge by selling his talent as a Forex mentor and strategist.</p>
                 </div>
                 <div class="member">
                     <img src="passport.jpg" alt="Team Member 3">
-                    <p>ABDULMALIK SULEIMAN- Coding Instructor</p>
-                    <P>Abdulmalik Suleiman, an experienced Coding Instructor, is now offering his exceptional programming skills to aspiring developers. With a passion for teaching and a strong background in various programming languages, Abdulmalik is committed to helping students master the art of coding. His hands-on approach and tailored lessons ensure that learners of all levels can build the confidence and expertise needed to excel in the tech industry.</P>
+                    <p>ABDULMALIK SULEIMAN- Programming Instructor</p>
+                    <P>Abdulmalik Suleiman, an experienced Programming Instructor, is now offering his exceptional programming skills to aspiring developers. With a passion for teaching and a strong background in various programming languages, Abdulmalik is committed to helping students master the art of coding. His hands-on approach and tailored lessons ensure that learners of all levels can build the confidence and expertise needed to excel in the tech industry.</P>
                 </div>
             </div>
         </section>
@@ -111,7 +110,7 @@
             <div id="coding-course" class="course">
                 <img src="coding.png" alt="Coding Course Image">
                 <div class="course-description">
-                    <h3>Coding</h3>
+                    <h3>Programming</h3>
                     <p>Learn the latest in coding and software development. Our coding course covers programming languages, software development practices, and much more.</p>
                     <a href="coding_syllabus.html">View Syllabus</a>
                 </div>
@@ -140,8 +139,5 @@
     <footer>
         <p>&copy; 2024 OX FOUNDATION. All rights reserved.</p>
     </footer>
-    <div class="watermark">
-        <img src="OX_IMAGE-removebg.png" alt="Watermark">
-    </div>
 </body>
 </html>
